=======
CHANGES
=======

0.4.0beta5
----------

- mysql views can be reflected again. [ticket:748]

- AssociationProxy can now take custom getters and setters.

- Fixed malfunctioning BETWEEN in orm queries.

- Fixed OrderedProperties pickling [ticket:762]

- Tickets fixed:

  - [ticket:742]
  - [ticket:748]
  - [ticket:760]
  - [ticket:762]

0.4.0beta4
----------

- Tidied up what ends up in your namespace when you 'from sqlalchemy import *':

  - 'table' and 'column' are no longer imported.  They remain available by
    direct reference (as in 'sql.table' and 'sql.column') or a glob import
    from the sql package.  It was too easy to accidentally use a
    sql.expressions.table instead of schema.Table when just starting out
    with SQLAlchemy, likewise column.

  - Internal-ish classes like ClauseElement, FromClause, NullTypeEngine,
    etc., are also no longer imported into your namespace

  - The 'Smallinteger' compatiblity name (small i!) is no longer imported,
    but remains in schema.py for now.  SmallInteger (big I!) is still
    imported.

- The connection pool uses a "threadlocal" strategy internally to return
  the same connection already bound to a thread, for "contextual" connections;
  these are the connections used when you do a "connectionless" execution
  like insert().execute().  This is like a "partial" version of the
  "threadlocal" engine strategy but without the thread-local transaction part 
  of it.  We're hoping it reduces connection pool overhead as well as 
  database usage.  However, if it proves to impact stability in a negative way,
  we'll roll it right back.
  
- Fix to bind param processing such that "False" values (like blank strings)
  still get processed/encoded.

- Fix to select() "generative" behavior, such that calling column(),
  select_from(), correlate(), and with_prefix() does not modify the
  original select object [ticket:752]
  
- Added a "legacy" adapter to types, such that user-defined TypeEngine